--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.4",
+    "sqlite3": "^5.1.7"
   }
 }
